# cyto-assist

./: .black.toml  .cascade.js  .claude  .codeiumignore  .cruft.json  .cruft.toml  .cursorignore  .cursorindexingignore  .cz.toml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  .windsurfignore  .yamllint  ATTRIBUTION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IDE_SETUP.md  LICENSE  README.md  noxfile.py  pyproject.toml  test_mondo.py
.agents/: README.md  config.yaml
.agents/commands/: lint.md  setup.md  test.md
.agents/hooks/: pre-commit.md
.agents/plugins/claude/: instructions.md
.agents/plugins/cursor/: rules.md
.agents/plugins/gemini/: instructions.md
.agents/plugins/windsurf/: rules.md
.agents/skills/: bibliography  brand  communication  dev-standards  diagramming  docx  google-workspace  grants  languages  markdown-conversion  openness  orchestration  orchestrator  org  pdf  pptx  science  software-engineering  teams  thinking-and-planning  tools  workspace  writing  xlsx
.agents/skills/environment-setup/: SKILL.md
.agents/skills/healthcare-ai/: SKILL.md
.agents/skills/python-dev/: SKILL.md
.agents/skills/testing/: SKILL.md
.agents/workflows/: environment-resolve.md  new-feature.md
.cursor/rules/: documentation.md  python-healthcare-ai.md  testing-standards.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
docs/: 5-HOWTO.md  api.md  conf.py  neo4j_guide.md  ontology_experiments.py  pkg_guide.md
docs/design/: branding.md
docs/notebooks/: example.ipynb  tutorial.py  tutorial.qmd
experiments/: README.md
knowledge_graph/: build_bioregistry.py  debug_edges.py  load_open_targets.py  schema-config.yaml  test_schema.py
materials/designs/: 00_master_plan.md  README.md
materials/designs/architecture/: 01_modular_content_architecture.md  02_orchestration_design.md  03_whiteboard_design.md  04_virtual_organization_design.md  README.md
materials/designs/products/: 01_paper_analysis_platform.md  02_personal_assistant.md  README.md
materials/designs/research/: 01_framework_assessment.md  02_edge_ai_assessment.md  02_workflow_automation_evaluation.md  03_large_scale_data.md  04_paper_ide_assessment.md  README.md
materials/drafts/applications/: ARPA-H_PHO_Solution_Summary.md  Astera_Institute_Residency.md  Brains Accelerator Application (Winter 2025).md  Convergent_Research_FRO_Abstract.md  Effective_Altruism_LTFF_Application.md  Foresight AI for Safety & Science Nodes 2026.md  OpenAI Grove Application.md  (+1 more)
notebooks/: README.md
scripts/: anytype_bridge.py  author_profiler.py  biomol_id_mapper.py  citation_network.py  download_manager.py  entity_harmonizer.py  mesh_annotator.py  pkg_explorer.py  proposal_section_generator.py  setup_env.py  sync_knowledge.sh  text_standardizer.py  zotero_to_anytype.py
scripts/hooks/: block_giant_files.sh
src/cyto_assist/: __init__.py
src/cytognosis_tools/: __init__.py  cli.py  skill_setup.py  virtual_hiring.py
tests/: test_backend.py  test_basic.py  test_environment.py
windsurf-configs/: README.md
windsurf-configs/rules/: documentation-standards.md  healthcare-ai-development.md  security-compliance.md  testing-standards.md
(+174 files in other folders)
